WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

THINK: struct passwd *userinfo; /* defined in pwd.h + if ((userinfo = getpwuid(getuid())) != NULL) + shell = strdup(userinfo->pw_shell); /* retrieve current shell */ 

TODO: xim "how to" faq entry
TODO: rxvt -bg #comment

	- changed interpretation of [alpha] colour prefix.
        - +option now really sets the option to default, instead of using the
          resource value.
        - use exit status 2 in urxvtc when urxvtd couldn't be contacted.
        - the linux yield hack is back, now using usleep, and enabled only on
          __linux__.
        - further round trip eliminations in the !XFT case by remembering
          the colour components.
        - plain scrollbar works better with -sr.
        - fixed half-shadow scrollbar look.
        - reorganised the FAQ into multiple sections.

7.5  Tue Jan 31 15:15:43 CET 2006
        - further improvements to the careful mode detection, and font width
          detection: 
          - fully double-wide fonts will now be correctly treated,
          - overlap detection was improved.
          - detect totally broken fonts (usually synthesized by xft).
          - careful mode forced refresh sometimes clashed with blinking,
            causing unnecessary screen redraws.
        - better handling of XFT combining characters.
        - enable antialiasing for some replacement fonts, as they
          might get used for other encodings which really need it, later.
        - remove spacing=100 from all default fonts, as this creates totally
          weird spacing (5 times normal) with xft.
        - removed iso10646 fallback, as xorgs iso10646 encoded fonts are mostly
          broken.
        - removed gnu unifont fallback, all combining characters are broken.
        - replace named colours by xorg's rgb.txt equivalents, to